force-app/main/default/objects/Coctail__c/Coctail__c.object-meta.xml
<CustomObject>
    <label>Cocktail</label>
    <nameField>
        <label>Coctail Recipe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cocktails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>