force-app/main/default/objects/Coctail__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordinary Drink</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Shake</fullName>
            </value>
            <value>
                <fullName>Other / Unknown</fullName>
            </value>
            <value>
                <fullName>Cocoa</fullName>
            </value>
            <value>
                <fullName>Shot</fullName>
            </value>
            <value>
                <fullName>Coffee / Tea</fullName>
            </value>
            <value>
                <fullName>Homemade Liqueur</fullName>
            </value>
            <value>
                <fullName>Punch / Party Drink</fullName>
            </value>
            <value>
                <fullName>Beer</fullName>
            </value>
            <value>
                <fullName>Soft Drink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>