force-app/main/default/objects/Coctail__c/fields/Drink_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Drink_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Drink External Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>