force-app/main/default/objects/Coctail__c/fields/Ingredient1__c.field-meta.xml
<CustomField>
    <fullName>Ingredient1__c</fullName>
    <label>Ingredient1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>