force-app/main/default/objects/Coctail__c/fields/Ingredient2__c.field-meta.xml
<CustomField>
    <fullName>Ingredient2__c</fullName>
    <label>Ingredient2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>