force-app/main/default/objects/Coctail__c/fields/Ingredient3__c.field-meta.xml
<CustomField>
    <fullName>Ingredient3__c</fullName>
    <label>Ingredient3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>