force-app/main/default/objects/Coctail__c/fields/Measure1__c.field-meta.xml
<CustomField>
    <fullName>Measure1__c</fullName>
    <label>Measure1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>