force-app/main/default/objects/Coctail__c/fields/Measure2__c.field-meta.xml
<CustomField>
    <fullName>Measure2__c</fullName>
    <label>Measure2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>