force-app/main/default/objects/Coctail__c/fields/Measure3__c.field-meta.xml
<CustomField>
    <fullName>Measure3__c</fullName>
    <label>Measure3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>