force-app/main/default/objects/Coctail__c/fields/No_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>No_Ingredients__c</fullName>
    <label>No of Ingredients</label>
    <summaryForeignKey>Cocktail_Ingredients__c.Cocktail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>