force-app/main/default/objects/Coctail__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <description>Picture Display</description>
    <formula>IF (NOT(ISBLANK(PictureURL__c)),IMAGE(PictureURL__c,&apos;Image&apos;,200,200),&quot;No Image is Captured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>