force-app/main/default/objects/Coctail__c/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <description>Cocktail picture</description>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>